# px4-quad-vicon-starter

./: README.md  dasc3.params
quad_navigation/: CMakeLists.txt  package.xml  params_10_June_2021_WORKS_WELL.params
quad_navigation/launch/: initiate.launch  multi_initiate.launch
quad_navigation/src/: mocap_node.cpp  offb_node.cpp  offb_velocity_node.cpp
vicon_bridge/launch/: vicon.launch
